Decodificación de la barra de navegación Navbar.

--- a/watchRepair/templates/home.html
+++ b/watchRepair/templates/home.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Bienvenidos a WPA Watch Repair Parts and Accessories</h1>
-</body>
-</html>
+{% extends "base/base.html" %}
+{% block title %}Inicio - Watch Repair{%endblock%}
+{% block content %}
+    <h2>Bienvenido a Watch Repair</h2>
+    <p>Tu mejor opción para reparar y mantener tus relojes.</p>
+{% endblock %}
