--- a/watchRepair/static/css/styles.css
+++ b/watchRepair/static/css/styles.css
@@ -9,9 +9,19 @@ body {
 
 /* Navigation bar navbar. --//-- Barra de navegación navbar. */
 .navbar {
-    background-color: rgb(255, 232, 0);
+    background-color: rgb(196, 196, 196);
+    /* background-color: rgb(255, 232, 0); */
 }
 
 .navbar-collapse {
     justify-content: flex-end;
+}
+
+
+/* Section presentation --/-- Sección de presentacion */
+.presentation {
+    background-color: rgb(204, 204, 204);
+    min-height: 100px;
+    text-align: center;
+    padding: 1.5rem;
 }
