Configurada las paginas servicios, contactos, nosotros.

--- a/watchRepair/templates/bases/base.html
+++ b/watchRepair/templates/bases/base.html
@@ -46,16 +46,16 @@
                             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Servicios</a>
+                            <a class="nav-link" href="{% url 'services' %}">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Nosotros</a>
+                            <a class="nav-link" href="{% url 'aboutUs' %}">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contactos</a>
+                            <a class="nav-link" href="{% url 'contactUs' %}">Contactos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Administración</a>
+                            <a class="nav-link" href="{% url 'admin:index' %}">Administración</a>
                         </li>
                     </ul>
                     <!-- <form class="d-flex" role="search">
